implemented the logic for all services
